--- a/style/gameScreen.css
+++ b/style/gameScreen.css
@@ -148,3 +148,67 @@
     cursor: pointer;
     color: #FFD700;
 }
+
+.history{
+    cursor: pointer;
+    font-weight: bold;
+    line-height: 30px;
+    width: 100%;
+    box-sizing: border-box;
+    height: fit-content;
+}
+
+.history{
+    text-align: center;
+}
+
+.tableBTN{
+    cursor: pointer;
+    font-weight: bold;
+    border-top: none;
+    width: 100%;
+}
+
+.tableContainer{
+    position: fixed;
+    top: 0px;
+    margin-left: 10px;
+    left: 0px;
+    margin-top: 10px;
+    border: 5px solid rgb(150, 5, 5);
+    height: fit-content;
+    width: 30%;
+    z-index: 10;
+}
+
+.tableContainerCenter{
+    position: fixed;
+    top: 0px;
+    margin-left: 10px;
+    left: 0px;
+    margin-top: 10px;
+    border: 5px solid rgb(150, 5, 5);
+    height: fit-content;
+    width: 30%;
+}
+
+.tableContainerCenter{
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: fit-content;
+    background-color: #6b0f1a;
+    z-index: 100;
+}
+
+.cover{
+    display: none;
+    z-index: 10;
+    width: 100%;
+    height: 100%;
+}
+
+.tableCloseBTN{
+    cursor: pointer;
+    width: 100%;
+}
